--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
+    "@tanstack/react-query": "^5",
+    "axios": "^1.3.3",
+    "infinite-react-carousel": "^1.2.11",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "sass": "^1.58.3"
+    "react-router-dom": "^6.8.0",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
