--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
+    "@tanstack/react-query": "^5",
     "axios": "^1.3.3",
     "infinite-react-carousel": "^1.2.11",
     "moment": "^2.29.4",
